Updated OpenGrok to 0.12 from upstream